Updated Index and RazorTest Views
Added a HTML anchor tag that navigates to the test page

--- a/Week1/Week1/Views/Home/Index.cshtml
+++ b/Week1/Week1/Views/Home/Index.cshtml
@@ -7,3 +7,5 @@
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
     <a href="../TestPage.html">Go to Test Page</a>
 </div>
+
+<a href="~/Test/RazorTest">Go to test page.</a>
